@@ -1,3 +1,8 @@
+2020-01-21  Tobias Burnus  <tobias@codesourcery.com>
+
+	PR fortran/93309
+	* gfortran.dg/external_implicit_none_2.f90: New.
+
 2020-01-21  Richard Biener  <rguenther@suse.de>
 
 	PR tree-optimization/92328
