@@ -1,3 +1,11 @@
+2020-01-21  Tobias Burnus  <tobias@codesourcery.com>
+
+	PR fortran/93309
+	* interface.c (gfc_procedure_use): Also check parent namespace for
+	'implict none (external)'.
+	* symbol.c (gfc_get_namespace): Don't set has_implicit_none_export
+	to parent namespace's setting. 
+
 2020-01-19  Thomas König  <tkoenig@gcc.gnu.org>
 
 	PR fortran/44960
